kustomize/overlay/dev/test-jayani-dev-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-jayani-dev
  labels:
    environmentId: env_43ca95d8-7ff2-4f86-bc6f-349495bc3960
    projectId: project_2114d41b-c03c-493c-9940-7a11fce4f083
    projectName: test-jayani
    environmentName: dev
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
